# dummybridge

./: .editorconfig  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  go.mod  go.sum  pyproject.toml  setup.cfg
.github/workflows/: deploy.yaml  docker.yaml
cmd/dummybridge/: Dockerfile  main.go
cmd/loginhelper/: Dockerfile  main.go
cmd/loginhelper/pages/: cookies.html  daw_submit.html  localstorage.html
dummy_bridge/: __init__.py  __main__.py  control_room.py  generate.py  message_send_status.py  util.py  websocket.py
pkg/connector/: backfill.go  client.go  client_test.go  commands.go  connector.go  example-config.yaml  generators.go  login.go  message_requests.go
