[metadata]
name = DummyBridge
version = 0.0.1

[options]
packages = dummy_bridge
python_requires = >=3.8
install_requires =
  mautrix >=0.15, <0.16
  click >=8, <9
  faker >=4, <5

[options.extras_require]
dev =
  black==22.1.0
  isort==5.10.1
  flake8==4.0.1
  flake8-black==0.3.2
  flake8-commas==2.1.0
  flake8-isort==4.1.1

[options.entry_points]
console_scripts =
    dummybridge = dummy_bridge.__main__:main

[flake8]
max-line-length = 100
# See: https://github.com/PyCQA/pycodestyle/issues/373
extend-ignore = E203
